[metadata]
name = model_bases-AustinMadert
version = 0.0.1
author = Austin Scott Madert
author_email = author@email.com
description = A package containing model base classes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AustinMadert/model_bases
project_urls =
    Bug Tracker = https://github.com/AustinMadert/model_bases/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = model_bases
packages = find:
python_requires = >=3.7

[options.packages.find]
where = model_bases